k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudpredict-api-service
  namespace: cloudpredict
  labels:
    app: cloudpredict
    component: api
spec:
  type: ClusterIP
  selector:
    app: cloudpredict
    component: api
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
